OSL missing distance to line segment function #33654

Closed
opened 2012-12-22 10:49:44 +01:00 by Michel Anders · 7 comments
Member

%%%An OSL script that contains a call to distance(p,p1,p2) compiles fine but crashes blender when rendering starts. See attached screenshot for the detailed error message. It appears that this function is missing in the runtime OSL library, so this might be an OSL bug instead of a Blender issue. The two argument version of the function (distance(p1,p2) ) works fine.

My system: w32, blender r53247 from buildbot

steps to reproduce:

  • with cycles & OSL enabled and viewport in anything but rendered mode
  • add a node material
  • add a script node, choose external and point to attached .osl script (should compile fine)
  • enable console to see relevant error message
  • switch viewport to rendered view
    .%%%
%%%An OSL script that contains a call to distance(p,p1,p2) compiles fine but crashes blender when rendering starts. See attached screenshot for the detailed error message. It appears that this function is missing in the runtime OSL library, so this might be an OSL bug instead of a Blender issue. The two argument version of the function (distance(p1,p2) ) works fine. My system: w32, blender r53247 from buildbot steps to reproduce: - with cycles & OSL enabled and viewport in anything but rendered mode - add a node material - add a script node, choose external and point to attached .osl script (should compile fine) - enable console to see relevant error message - switch viewport to rendered view .%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%We need Thomas' advice for this!

Seems to be strange to have OSL compile this fine, and then crash...%%%

%%%We need Thomas' advice for this! Seems to be strange to have OSL compile this fine, and then crash...%%%

%%%Crash confirmed, related to OSL itself.

OSL code only contains a "osl_distance_fvv" but not a "osl_distance_fvvv" shadeop.
I can't find it in the codebase of our blender-fixes branch (the one we used to compile the libs, currently in SVN).

Brecht:
OpenShadingLanguage\src\include\dual_vec.h only contains the code for the distance(point p0, point p1) function, the other (distance line -> point) is not there if I see that correct?

%%%

%%%Crash confirmed, related to OSL itself. OSL code only contains a "osl_distance_fvv" but not a "osl_distance_fvvv" shadeop. I can't find it in the codebase of our blender-fixes branch (the one we used to compile the libs, currently in SVN). Brecht: OpenShadingLanguage\src\include\dual_vec.h only contains the code for the distance(point p0, point p1) function, the other (distance line -> point) is not there if I see that correct? %%%

%%%I forgot: As the function header is in stdosl.h, it compiles fine, but then it can't find the underneath code.

So OSL team either had this function before, and removed it again or it has not been implemented yet. %%%

%%%I forgot: As the function header is in stdosl.h, it compiles fine, but then it can't find the underneath code. So OSL team either had this function before, and removed it again or it has not been implemented yet. %%%

%%%It seems this was never implemented. I've removed it now from our stdosl.h so it should now give a compile error, will look into a fix for OSL itself later.%%%

%%%It seems this was never implemented. I've removed it now from our stdosl.h so it should now give a compile error, will look into a fix for OSL itself later.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%provided a workarounf here for people needing it: http://blenderthings.blogspot.nl/2012/12/a-replacement-for-missing-osl-distance.html

instead of implementing it in the library it could be an alternative to implement it in stdosl.h

%%%

%%%provided a workarounf here for people needing it: http://blenderthings.blogspot.nl/2012/12/a-replacement-for-missing-osl-distance.html instead of implementing it in the library it could be an alternative to implement it in stdosl.h %%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33654
No description provided.