Cycles OSL: handle new getattribute constant folding with renderstate NULL check, and fix #33654, distance to line segment function is not implemented but compiled anyway, now it should give a compile error.